--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="main_div">
             <center>
                 <button class="button btn btn-warning" onclick="soundClassify()">Press Here</button>
-                <h3 id="true sound"> I can hear - </h3>
+                <h3 id="hear_tag"> I can hear : </h3>
+                <h4 id="accuracy">detected</h4>
                 <br>
                 <img src="hearing defult img.png" id="Changing_img" width="250px" height="250px">
             </center>
